force-app/main/default/objects/cgcloud__RTR_Event__e/cgcloud__RTR_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Events for RTR features</description>
    <label>RTR Event</label>
    <pluralLabel>RTR Events</pluralLabel>
</CustomObject>