force-app/main/default/objects/cgcloud__RTR_Event__e/fields/cgcloud__Reporting_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reporting_Config_Id__c</fullName>
    <label>Reporting Config Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>