force-app/main/default/objects/cgcloud__RTR_Event__e/fields/cgcloud__Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Type__c</fullName>
    <description>valid values are &quot;notification&quot;</description>
    <label>Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>