force-app/main/default/objects/cgcloud__RTR_Event__e/fields/cgcloud__UserId__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UserId__c</fullName>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>